--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -3,82 +3,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Chat App</title>
+	<meta charset="UTF-8">
+	<title>My Chat App</title>
 </head>
 <body>
 <h1>Welcome to chat room: {{ room.name }}</h1>
 
-<div id="messages"></div>
+<button type="button" id="load_older_messages">Older Messages</button>
+<div id="messages">
+	{% for message in messages %}
+	<div><b>{{ message.sender }}&nbsp;{{ message.date_sent }}:&nbsp;</b> {{ message.text }}</div>
+	{% endfor %}
+</div><br>
 
 <form id="message_input_form">
-    <input type="text" id="message_input" placeholder="Enter your message here">
-    <button type="submit">Send</button>
+	<input type="text" id="message_input" placeholder="Enter your message here">
+	<button type="submit">Send</button>
 </form>
 
 <li><a href="{{ url_for("main.edit_room", room_id=room._id)}}">Edit</a></li>
 
 <ul>
-    {% for member in room_members %}
-    <li>{{ member._id.username }}</li>
-    {% endfor %}
+	{% for member in room_members %}
+	<li>{{ member._id.username }}</li>
+	{% endfor %}
 </ul>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script>
-    const socket = io.connect();
+	const socket = io.connect();
 
-    socket.on('connect', function () {
-        socket.emit('join_room', {
-            username: "{{ username }}",
-            room: "{{ room._id }}"
-        });
+	socket.on('connect', function () {
+		socket.emit('join_room', {
+			username: "{{ username }}",
+			room: "{{ room._id }}"
+		});
 
-        let message_input = document.getElementById('message_input');
+		let message_input = document.getElementById('message_input');
 
-        document.getElementById('message_input_form').onsubmit = function (e) {
-            e.preventDefault();
-            let message = message_input.value.trim();
-            if (message.length) {
-                socket.emit('send_message', {
-                    username: "{{ username }}",
-                    room: "{{ room._id }}",
-                    message: message
-                })
-            }
-            message_input.value = '';
-            message_input.focus();
-        }
-    });
+		document.getElementById('message_input_form').onsubmit = function (e) {
+			e.preventDefault();
+			let message = message_input.value.trim();
+			if (message.length) {
+				socket.emit('send_message', {
+					username: "{{ username }}",
+					room: "{{ room._id }}",
+					message: message
+				})
+			}
+			message_input.value = '';
+			message_input.focus();
+		}
+	});
 
-    window.onbeforeunload = function () {
-        socket.emit('leave_room', {
-            username: "{{ username }}",
-            room: "{{ room._id }}"
-        })
-    };
+	let page = 0;
 
-    socket.on('receive_message', function (data) {
-        console.log(data);
-        const newNode = document.createElement('div');
-        newNode.innerHTML = `<b>${data.username}:&nbsp;</b> ${data.message}`;
-        document.getElementById('messages').appendChild(newNode);
-    });
+	document.getElementById("load_older_messages").onclick = (e) => {
+		page += 1;
+		fetch("/room/{{ room._id }}/history?page=" + page, {
+			method: 'GET',
+			headers: {
+				'Content-Type': 'application/json'
+			}
+		}).then(response => {
+			response.json().then(messages => {
+				messages.reverse().forEach(message => {
+					prepend_message(message.text, message.sender, message.date_sent)
+				})
+			})
+		})
+	};
 
-    socket.on('join_room_announcement', function (data) {
-        console.log(data);
-        if (data.username !== "{{ username }}") {
-            const newNode = document.createElement('div');
-            newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
-            document.getElementById('messages').appendChild(newNode);
-        }
-    });
+	function prepend_message(message, username, date_sent) {
+		const newNode = document.createElement('div');
+		newNode.innerHTML = `<b>${username}&nbsp;${date_sent}:&nbsp;</b> ${message}`
+		const load_messages_div = document.getElementById('messages');
+		load_messages_div.insertBefore(newNode, load_messages_div.firstChild);
+	}
 
-    socket.on('leave_room_announcement', function (data) {
-        console.log(data);
-        const newNode = document.createElement('div');
-        newNode.innerHTML = `<b>${data.username}</b> has left the room`;
-        document.getElementById('messages').appendChild(newNode);
-    });
+	window.onbeforeunload = function () {
+		socket.emit('leave_room', {
+			username: "{{ username }}",
+			room: "{{ room._id }}"
+		})
+	};
+
+	socket.on('receive_message', function (data) {
+		console.log(data);
+		const newNode = document.createElement('div');
+		newNode.innerHTML = `<b>${data.username}&nbsp;[${data.date_sent}]:&nbsp;</b> ${data.message}`;
+		document.getElementById('messages').appendChild(newNode);
+	});
+
+	socket.on('join_room_announcement', function (data) {
+		console.log(data);
+		if (data.username !== "{{ username }}") {
+			const newNode = document.createElement('div');
+			newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
+			document.getElementById('messages').appendChild(newNode);
+		}
+	});
+
+	socket.on('leave_room_announcement', function (data) {
+		console.log(data);
+		const newNode = document.createElement('div');
+		newNode.innerHTML = `<b>${data.username}</b> has left the room`;
+		document.getElementById('messages').appendChild(newNode);
+	});
 </script>
 </html>
